--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,5 @@
 	<string name="download">下载</string>
 	<string name="usercenter">个人中心</string>
 	<string name="more">更多</string>
-	
+	<string name="search_str">漫画名|作者</string>
 </resources>
