--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="app_name">Virgo</string>
     <string name="hello_world">Hello world!</string>
 	<string name="home_page">首页</string>
+	<string name="rank">排行</string>
+	<string name="cartoon_circle">动漫圈</string>
 	<string name="download">下载</string>
 	<string name="usercenter">个人中心</string>
 	<string name="more">更多</string>
